# clientbook_scraper

./: .gitignore  LICENSE  PLAN.md  README.md  build_app.sh  image_downloader.py  launcher.py  pyproject.toml  scraper.py  viewer.py
plan/: PLAN-2.md  PLAN.md
