[project]
name = "clientbook_scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "David Foster",email = "david@dafoster.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0) ; python_version < \"3.15\""
]


[tool.poetry]
package-mode = false
# Prevent accidental publishing to PyPI (or any other package repository)
private = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)"
]
